<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingTop="30dp"
    android:background="@color/blue100"
    tools:context=".TipsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="Mental Health Tracker"
            android:textAlignment="center"
            android:textSize="16dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/black" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppins"
                    android:text="How do you feel today?" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/date"
                    android:textColor="@color/blue300" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|bottom"
                    android:layout_marginVertical="20dp"
                    android:layout_marginStart="20dp"
                    android:backgroundTint="@color/blue300"
                    android:fontFamily="@font/poppins_semibold"
                    android:onClick="navigateToWriteDiary"
                    android:text="@string/button_writediary" />
            </LinearLayout>


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:src="@drawable/group" />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/poppins_medium"
                android:text="Diary History" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/blue300"
                android:fontFamily="@font/poppins_semibold"
                android:text="Check" />


        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                app:cardCornerRadius="30dp"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/poppins_bold"
                        android:text="Mental Health Care Tips"
                        tools:ignore="MissingConstraints" />

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <FrameLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <ImageView

                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="20dp"
                                    android:src="@drawable/cardpg" />

                                <Button
                                    android:id="@+id/button4"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="50dp"
                                    android:layout_marginTop="100dp"
                                    android:backgroundTint="@color/white"
                                    android:text="@string/button_view_more"
                                    android:textColor="@color/blue300" />


                            </FrameLayout>

                            <FrameLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <ImageView
                                    android:id="@+id/imageView6"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginVertical="20dp"
                                    android:src="@drawable/cardps" />

                                <Button
                                    android:id="@+id/button6"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="50dp"
                                    android:layout_marginTop="100dp"
                                    android:backgroundTint="@color/white"
                                    android:text="@string/button_view_more"
                                    android:textColor="@color/blue300" />

                            </FrameLayout>

                            <FrameLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <ImageView
                                    android:id="@+id/imageView7"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="20dp"
                                    android:src="@drawable/cardcs" />

                                <Button
                                    android:id="@+id/button7"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="50dp"
                                    android:layout_marginTop="80dp"
                                    android:backgroundTint="@color/white"
                                    android:text="@string/button_view_more"
                                    android:textColor="@color/blue300" />
                            </FrameLayout>

                        </LinearLayout>
                    </ScrollView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>